--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -112,11 +112,62 @@ password.policy.warningDays=30
 # URL to which the user will be redirected to change the passsword.
 password.policy.url=https://password.example.edu/change
 
-
-
+#========================================
+# Database - Connection Pool
+#========================================
+database.pool.minSize=6
+database.pool.maxSize=18
+ 
+# Maximum amount of time to wait in ms for a connection to become
+# available when the pool is exhausted
+database.pool.maxWait=10000
+ 
+# Amount of time in seconds after which idle connections
+# in excess of minimum size are pruned.
+database.pool.maxIdleTime=120
+ 
+# Number of connections to obtain on pool exhaustion condition.
+# The maximum pool size is always respected when acquiring
+# new connections.
+database.pool.acquireIncrement=6
+ 
+# == Connection testing settings ==
+ 
+# Period in s at which a health query will be issued on idle
+# connections to determine connection liveliness.
+database.pool.idleConnectionTestPeriod=30
+ 
+# Query executed periodically to test health
+database.pool.connectionHealthQuery=select 1
+ 
+# == Database recovery settings ==
+ 
+# Number of times to retry acquiring a _new_ connection
+# when an error is encountered during acquisition.
+database.pool.acquireRetryAttempts=5
+ 
+# Amount of time in ms to wait between successive aquire retry attempts.
+database.pool.acquireRetryDelay=2000
 
 #========================================
-# General properties
+# Database - General properties
+#========================================
+database.driverClass=${auth.db.driver.class}
+database.url=${auth.db.url}
+database.user=${auth.db.user}
+database.password=${auth.db.password}
+database.query=${auth.db.sql.query}
+
+#========================================
+# AD (Active Directory) - General properties
+#========================================
+ad.hostname=${ad.hostname}
+ad.port=${ad.port}
+ad.domain=${ad.domain}
+ad.searchBase=${ad.searchBase}
+
+#========================================
+# LDAP - General properties
 #========================================
 ldap.url=${ldap.url}
 
@@ -130,6 +181,7 @@ ldap.useStartTLS=false
 ldap.useSSL=false
 
 #Location of trust certificate of the ldap server
+ldap.trustedCert=
 #ldap.trustedCert=file://C:\\Development\\certificates\\10.252.220.198.crt
 
 #========================================
@@ -156,7 +208,7 @@ ldap.pool.prunePeriod=300
 ldap.pool.idleTime=600
 
 #========================================
-# Authentication
+# LDAP - Authentication
 #========================================
 
 # Base DN of users to be authenticated
