--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -150,7 +150,7 @@ database.pool.acquireRetryAttempts=5
 database.pool.acquireRetryDelay=2000
 
 #========================================
-# Database - General properties
+# Database - Authentication properties
 #========================================
 database.driverClass=${auth.db.driver.class}
 database.url=${auth.db.url}
@@ -159,12 +159,13 @@ database.password=${auth.db.password}
 database.query=${auth.db.sql.query}
 
 #========================================
-# AD (Active Directory) - General properties
+# AD (Active Directory) - Authentication properties
 #========================================
-ad.hostname=${ad.hostname}
-ad.port=${ad.port}
+ad.url=${ad.url}
 ad.domain=${ad.domain}
 ad.searchBase=${ad.searchBase}
+ad.searchFilter=(&(objectClass=user)(sAMAccountName={user}))
+#ad.searchFilter=(&(objectClass=user)(sAMAccountName={0}))
 
 #========================================
 # LDAP - General properties
