--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -157,6 +157,7 @@ database.url=${auth.db.url}
 database.user=${auth.db.user}
 database.password=${auth.db.password}
 database.query=${auth.db.sql.query}
+database.encoding=${auth.db.encoding.algo}
 
 #========================================
 # AD (Active Directory) - Authentication properties
