--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -96,6 +96,8 @@ cas.logout.followServiceRedirects=true
 # It is often time helpful to externalize log4j.xml to a system path to preserve settings between upgrades.
 # e.g. log4j.config.location=/etc/cas/log4j.xml
 # log4j.config.location=classpath:log4j.xml
+#log4j.config.location=classpath:/WEB-INF/classes/log4j.xml
+
 #
 # log4j refresh interval in millis
 # log4j.refresh.interval=60000
