--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<overlays>
 						<overlay>
 							<groupId>org.jasig.cas</groupId>
