--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
 				<configuration>
 					<releaseProfiles>prod</releaseProfiles>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.0</version>	
 			</plugin>
 		</plugins>
 
@@ -293,7 +300,7 @@
 		<repo.release>http://csolnexus2.clients.local/repository/maven-releases</repo.release>
 		<repo.snapshot>http://csolnexus2.clients.local/repository/maven-snapshots</repo.snapshot>
 
-		<additionalparam>-Xdoclint:none</additionalparam>
+		<additionalJOption>-Xdoclint:none</additionalJOption>
 	</properties>
 
 </project>
