--- a/pom.xml
+++ b/pom.xml
@@ -274,7 +274,7 @@
 			<properties>
 				<cas.server.host.name>10.216.2.20</cas.server.host.name>
 				<cas.server.host.port>443</cas.server.host.port>
-				<auth.db.url>jdbc:jtds:sqlserver://10.216.2.19:1433/RDMA;integratedSecurity=true;</auth.db.url>
+				<auth.db.url>jdbc:jtds:sqlserver://10.216.2.19:1433;database=RDMA;integratedSecurity=true;</auth.db.url>
 				<auth.db.user></auth.db.user>
 				<auth.db.password></auth.db.password>
 				<auth.db.sql.query>select user_password from users_gdma2 where username=?</auth.db.sql.query>
