Musgrave PSQ settings

--- a/pom.xml
+++ b/pom.xml
@@ -274,20 +274,13 @@
 			<properties>
 				<cas.server.host.name>10.216.2.20</cas.server.host.name>
 				<cas.server.host.port>443</cas.server.host.port>
-				<auth.db.url>jdbc:jtds:sqlserver://10.216.2.19:1433;database=RDMA;integratedSecurity=true;</auth.db.url>
-				<auth.db.user></auth.db.user>
-				<auth.db.password></auth.db.password>
-				<auth.db.sql.query>select user_password from users_gdma2 where username=?</auth.db.sql.query>
+				<auth.db.url>jdbc:sqlserver://10.216.2.19:1433;database=RDMA;integratedSecurity=true;</auth.db.url>
+				<auth.db.sql.query>select user_password from dbo.users_gdma2 where username=?</auth.db.sql.query>
 				<auth.db.encoding.algo>SHA-1</auth.db.encoding.algo>
 				<auth.db.driver.class>com.microsoft.sqlserver.jdbc.SQLServerDriver</auth.db.driver.class>
 
-
-				
 				<authentication.handler.bean>dbAuthHandler</authentication.handler.bean>
 				<authentication.config.context.resource>dbConfigContext.xml</authentication.config.context.resource>
-				
-
-
 
 				<customer>Musgrave</customer>
 				<customer.url>https://www.musgravegroup.com/</customer.url>
