Updated MUSGRAVe-PROD profile, adding LDAP details

--- a/pom.xml
+++ b/pom.xml
@@ -292,14 +292,14 @@
 		<profile>
 			<id>musgrave-prod</id>
 			<properties>
-				<cas.server.host.name>10.216.2.20</cas.server.host.name>
+				<cas.server.host.name>10.220.32.4</cas.server.host.name>
 				<cas.server.host.port>443</cas.server.host.port>
 
 				<!-- Active Directory -->
-				<ad.url>ldap://dndc.clients.local</ad.url>
+				<ad.url>ldap://airdc003.musgravegroup.net</ad.url>
 				<!-- ad.url>ldap://dndc.clients.local:389</ad.url -->
-				<ad.domain>CLIENTS</ad.domain>
-				<ad.searchBase>DC=clients,DC=local</ad.searchBase>
+				<ad.domain>MUSGRAVE</ad.domain>
+				<ad.searchBase>DC=musgrave,DC=local</ad.searchBase>
 
 				<authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
 				<authentication.config.context.resource>adConfigContext.xml</authentication.config.context.resource>
