Replaced the load balancer IP address with the server name in the pom file.

--- a/pom.xml
+++ b/pom.xml
@@ -292,12 +292,11 @@
 		<profile>
 			<id>musgrave-prod</id>
 			<properties>
-				<cas.server.host.name>10.220.32.4</cas.server.host.name>
+				<cas.server.host.name>applications.musgrave.ie</cas.server.host.name>
 				<cas.server.host.port>443</cas.server.host.port>
 
 				<!-- Active Directory -->
 				<ad.url>ldap://airdc003.musgravegroup.net</ad.url>
-				<!-- ad.url>ldap://dndc.clients.local:389</ad.url -->
 				<ad.domain>MUSGRAVE</ad.domain>
 				<ad.searchBase>DC=musgrave,DC=local</ad.searchBase>
 
